@startuml Database_ER_Diagram
title Automation Testing Platform - Database ER Diagram

hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "projects" as projects {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  description : TEXT
  active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "test_suites" as test_suites {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  description : TEXT
  project_id : VARCHAR(36) <<FK>>
  active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "test_cases" as test_cases {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  description : TEXT
  feature_title : VARCHAR(500)
  scenario_title : VARCHAR(500)
  test_type : VARCHAR(50)
  priority : VARCHAR(50)
  active : BOOLEAN
  timeout_seconds : INTEGER
  retry_count : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  created_by : VARCHAR(255)
}

entity "test_suite_test_cases" as test_suite_test_cases {
  * test_suite_id : VARCHAR(36) <<PK, FK>>
  * test_case_id : VARCHAR(36) <<PK, FK>>
  --
  order_index : INTEGER <<recommended>>
}

entity "test_case_tags" as test_case_tags {
  * test_case_id : VARCHAR(36) <<PK, FK>>
  * tag : VARCHAR(100) <<PK>>
}

entity "test_steps" as test_steps {
  * id : VARCHAR(36) <<PK>>
  --
  test_case_id : VARCHAR(36) <<FK>>
  order_index : INTEGER
  name : VARCHAR(255)
  gherkin_keyword : VARCHAR(10)
  gherkin_step_text : TEXT
  action_type : VARCHAR(50)
  action_parameters : JSONB
  target_element_id : VARCHAR(36)
  assertion_type : VARCHAR(50)
  assertion_operator : VARCHAR(50)
  expected_value : TEXT
  actual_value_source : TEXT
  extraction_var_name : VARCHAR(255)
  extraction_source : VARCHAR(50)
  extraction_expression : TEXT
  is_background : BOOLEAN
  continue_on_failure : BOOLEAN
  wait_before_ms : INTEGER
  wait_after_ms : INTEGER
}

entity "test_parameters" as test_parameters {
  * id : VARCHAR(36) <<PK>>
  --
  test_case_id : VARCHAR(36) <<FK>>
  parameter_name : VARCHAR(255)
  data_rows : JSONB
}

entity "page_objects" as page_objects {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  description : TEXT
  page_url : VARCHAR(500)
  project_id : VARCHAR(36) <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "page_elements" as page_elements {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  description : TEXT
  page_object_id : VARCHAR(36) <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "element_locators" as element_locators {
  * id : VARCHAR(36) <<PK>>
  --
  page_element_id : VARCHAR(36) <<FK>>
  platform_type : VARCHAR(50)
  locator_strategy : VARCHAR(50)
  locator_value : TEXT
  fallback_strategy : VARCHAR(50)
  fallback_value : TEXT
}

entity "environments" as environments {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  base_url : VARCHAR(500)
  project_id : VARCHAR(36) <<FK>>
  variables : JSONB
  active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "execution_targets" as execution_targets {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  description : TEXT
  environment_id : VARCHAR(36) <<FK>>
  platform_type : VARCHAR(50)
  browser_type : VARCHAR(50)
  browser_version : VARCHAR(50)
  headless : BOOLEAN
  browser_arguments : TEXT
  os_type : VARCHAR(50)
  os_version : VARCHAR(50)
  viewport_width : INTEGER
  viewport_height : INTEGER
  device_name : VARCHAR(255)
  device_udid : VARCHAR(255)
  platform_version : VARCHAR(50)
  automation_engine : VARCHAR(50)
  app_package : VARCHAR(255)
  app_activity : VARCHAR(255)
  bundle_id : VARCHAR(255)
  app_path : VARCHAR(500)
  remote_url : VARCHAR(500)
  extra_capabilities : JSONB
  active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "test_runs" as test_runs {
  * id : VARCHAR(36) <<PK>>
  --
  test_suite_id : VARCHAR(36) <<FK>>
  execution_target_id : VARCHAR(36) <<FK>>
  environment_id : VARCHAR(36) <<FK>>
  status : VARCHAR(50)
  triggered_by : VARCHAR(255)
  started_at : TIMESTAMP
  completed_at : TIMESTAMP
  duration_ms : BIGINT
  total_cases : INTEGER
  passed_cases : INTEGER
  failed_cases : INTEGER
  skipped_cases : INTEGER
}

entity "test_case_results" as test_case_results {
  * id : VARCHAR(36) <<PK>>
  --
  test_run_id : VARCHAR(36) <<FK>>
  test_case_id : VARCHAR(36) <<FK>>
  execution_target_id : VARCHAR(36) <<FK>>
  status : VARCHAR(50)
  started_at : TIMESTAMP
  completed_at : TIMESTAMP
  duration_ms : BIGINT
  error_message : TEXT
  stack_trace : TEXT
  runtime_variables : JSONB
}

entity "test_step_results" as test_step_results {
  * id : VARCHAR(36) <<PK>>
  --
  test_case_result_id : VARCHAR(36) <<FK>>
  test_step_id : VARCHAR(36)
  order_index : INTEGER
  status : VARCHAR(50)
  duration_ms : BIGINT
  actual_value : TEXT
  expected_value : TEXT
  error_message : TEXT
  screenshot_path : VARCHAR(500)
  metadata : JSONB
}

projects ||--o{ test_suites : contains
projects ||--o{ page_objects : owns
projects ||--o{ environments : has

test_suites ||--o{ test_suite_test_cases : maps
test_cases ||--o{ test_suite_test_cases : reusable_in
test_cases ||--o{ test_case_tags : has
test_cases ||--o{ test_steps : has
test_cases ||--o{ test_parameters : has
test_cases ||--o{ test_case_results : executed_as

page_objects ||--o{ page_elements : contains
page_elements ||--o{ element_locators : has
page_elements ||..o{ test_steps : target_element_id

environments ||--o{ execution_targets : has
environments ||--o{ test_runs : used_by

execution_targets ||--o{ test_runs : used_by
execution_targets ||--o{ test_case_results : used_by

test_suites ||--o{ test_runs : executed_as
test_runs ||--o{ test_case_results : contains
test_case_results ||--o{ test_step_results : contains
test_steps ||..o{ test_step_results : test_step_id

note right of test_suite_test_cases
  Reusable test-case design:
  one test suite can contain many test cases,
  and one test case can be reused by many suites.

  Recommended extra column:
  order_index, if suite execution order matters.
end note

@enduml

@startuml Reusable_Test_Case_Model
title Reusable Test Case Model

skinparam linetype ortho

entity "test_suites" as suites {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  project_id : VARCHAR(36) <<FK>>
}

entity "test_cases" as cases {
  * id : VARCHAR(36) <<PK>>
  --
  name : VARCHAR(255)
  feature_title : VARCHAR(500)
  scenario_title : VARCHAR(500)
  test_type : VARCHAR(50)
  priority : VARCHAR(50)
  active : BOOLEAN
}

entity "test_suite_test_cases" as suite_case_mapping {
  * test_suite_id : VARCHAR(36) <<PK, FK>>
  * test_case_id : VARCHAR(36) <<PK, FK>>
  --
  order_index : INTEGER
  active : BOOLEAN
}

suites ||--o{ suite_case_mapping
cases ||--o{ suite_case_mapping

@enduml

@startuml Execution_Result_Model
title Test Execution Result Model

skinparam linetype ortho

entity "test_suites" as run_suites {
  * id
  --
  name
}

entity "test_cases" as run_cases {
  * id
  --
  name
}

entity "test_steps" as run_steps {
  * id
  --
  test_case_id
  order_index
  gherkin_keyword
  gherkin_step_text
  action_type
}

entity "environments" as run_envs {
  * id
  --
  name
  base_url
}

entity "execution_targets" as run_targets {
  * id
  --
  environment_id
  platform_type
  browser_type
  device_name
  remote_url
}

entity "test_runs" as runs {
  * id
  --
  test_suite_id
  execution_target_id
  environment_id
  status
  started_at
  completed_at
  total_cases
  passed_cases
  failed_cases
  skipped_cases
}

entity "test_case_results" as case_results {
  * id
  --
  test_run_id
  test_case_id
  execution_target_id
  status
  duration_ms
  error_message
  runtime_variables
}

entity "test_step_results" as step_results {
  * id
  --
  test_case_result_id
  test_step_id
  order_index
  status
  duration_ms
  actual_value
  expected_value
  error_message
  screenshot_path
}

run_suites ||--o{ runs
run_envs ||--o{ runs
run_targets ||--o{ runs
run_suites ||--o{ suite_case_mapping
run_cases ||--o{ suite_case_mapping
run_cases ||--o{ run_steps
runs ||--o{ case_results
run_cases ||--o{ case_results
run_targets ||--o{ case_results
case_results ||--o{ step_results
run_steps ||..o{ step_results

@enduml

@startuml Page_Object_Locator_Model
title Page Object and Locator Model

skinparam linetype ortho

entity "projects" as po_projects {
  * id
  --
  name
}

entity "page_objects" as po_page_objects {
  * id
  --
  name
  description
  page_url
  project_id
}

entity "page_elements" as po_page_elements {
  * id
  --
  name
  description
  page_object_id
}

entity "element_locators" as po_element_locators {
  * id
  --
  page_element_id
  platform_type
  locator_strategy
  locator_value
  fallback_strategy
  fallback_value
}

entity "test_steps" as po_test_steps {
  * id
  --
  test_case_id
  target_element_id
  action_type
  action_parameters
}

po_projects ||--o{ po_page_objects
po_page_objects ||--o{ po_page_elements
po_page_elements ||--o{ po_element_locators
po_page_elements ||..o{ po_test_steps : target_element_id

@enduml

